# sachi

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  bump.sh  pyproject.toml  renovate.json
.github/workflows/: ci.yml  docker-publish.yml
sachi/: __init__.py  __main__.py  app.py  cli.py  config.py  context.py  engine.py  models.py  utils.py
sachi/resources/: config.toml
sachi/screens/: episodes.py  episodes.tcss  rename.py  rename.tcss
sachi/sources/: __init__.py  base.py  custom.py  tvdb.py
tools/: filebot.csv  filebot.py
