[project]
name = "sachi"
dynamic = ["version"]
description = "Terminal media files renamer (FileBot alternative)"
readme = "README.md"
license = "MIT"
authors = [{ name = "NextFire", email = "git@yuru.moe" }]
requires-python = ">=3.12"
dependencies = [
    "typer==0.16.0",
    "textual==3.2.0",
    "tomlkit==0.13.2",
    "pydantic==2.11.5",
    "aiohttp[speedups]==3.12.0",
    "yarl==1.20.0",
    "backoff==2.2.1",
    "jinja2==3.1.6",
    "pymediainfo==7.0.1",
    "guessit==3.8.0",
    # guessit requirement
    "setuptools==80.8.0",
]

[dependency-groups]
dev = ["pyright==1.1.401", "ruff==0.11.11", "textual-dev==1.7.0"]

[project.scripts]
sachi = "sachi:cli_app"

[project.urls]
homepage = "https://github.com/NextFire/sachi"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.pyright]
pythonVersion = "3.12"

[tool.ruff.lint]
extend-select = ["I"]
