[project]
name = "sachi"
dynamic = ["version"]
description = "Terminal media files renamer (FileBot alternative)"
readme = "README.md"
license = "MIT"
authors = [{ name = "NextFire", email = "git@yuru.moe" }]
requires-python = ">=3.12"
dependencies = [
    "typer==0.22.0",
    "textual==7.5.0",
    "tomlkit==0.14.0",
    "pydantic==2.12.5",
    "aiohttp[speedups]==3.13.3",
    "yarl==1.22.0",
    "backoff==2.2.1",
    "jinja2==3.1.6",
    "pymediainfo==7.0.1",
    "guessit==3.8.0",
    # guessit requirement
    "setuptools==82.0.0",
]

[dependency-groups]
dev = ["pyright==1.1.408", "ruff==0.15.0", "textual-dev==1.8.0"]

[project.scripts]
sachi = "sachi:cli_app"

[project.urls]
homepage = "https://github.com/NextFire/sachi"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.pyright]
pythonVersion = "3.12"

[tool.ruff.lint]
extend-select = ["I"]
